@@ -1,3 +1,4 @@
 DIST cachecontrol-0.10.2.tar.gz 24949 SHA256 381b8d5d8981d3c1a52eb1186f73362d200a6d7274fca82ca3bd8d28e726b85e SHA512 752f607a76c6cfca8c85da32dfea8c1d2cef59af0e78fe1aa8cc3b31dbe40414db587bd8a9fd2bbc863e838d961f4db0d3829ae8e8dfa00923efd0618b28b80e WHIRLPOOL 09beecf3b1863c22c9f6931a6185b9070e6506712d68100cbe8f733333403e7a008a61fb7a4ed09333fdecc8ad9e6df4f85c0370bdbf1334ad9abac95ea407e9
 DIST cachecontrol-0.10.3_pre20140802.tar.gz 26517 SHA256 393adc89494e44edd53ffe94f2a6489aff4bb7a394cb9612078409bcce38f17d SHA512 676982c98db1874fb49a141dc41e6a6ee3e30b9c50b4402413f6012026a0d54d63ab0776e93d3d2fc6948a9ffa228a639283e56d63d655c3d165dcec821216aa WHIRLPOOL 03edc196d625a40e9966cf64c5f8a5aabe87221a064cd6ba059654dbbd6f269b7a8304deb7cf98abb96da899e6e470e62992742febd913cb1a7c0bf8b1f44ac6
 DIST cachecontrol-0.10.6.tar.gz 27811 SHA256 af256cfc43e514b6caa9911b9634822cd79a04602c48ae1abe42443eded198b5 SHA512 80abf8c06b7c580972753fcb46ea8accf07c6af7f952921227ab49a9fc40d8abb3237fe8da768d79760ac605bf603445f06774f6190ba6dd0274611f4f100878 WHIRLPOOL a7f2b962dedeb3a14cbc53929aa2de9e7aed4febda902b139218646a95fa801de0411b8e4bcb3429618110aa4c9b99e8da4daded1ed0e185e316136e463bfd19
+DIST cachecontrol-0.11.5.tar.gz 33887 SHA256 2cbe23aeba9455ffbea399e5c2516e0b04b904f5910d225c2c82e76d8d8cfc63 SHA512 24f3597aaaf91df12b7aeca617c2a623a4b9be23308848544c92bf4a722ab7cd36ea027b29b085d717c8a7e90e4e4a04e4305f002785722b9025c999abe85a7c WHIRLPOOL ad6815a62ba8e540fcad632de77605c3c3645a565507c7a2b5ec0a484ba21225216e40859d1d7d7055ed631e13d3195733f7b52b49d698742113da113fec3252
